# ChessPgnReviserRust

./: Cargo.toml  README.md
src/: graphic.rs  main.rs
src/graphic/: chess_board.rs  main_window.rs
src/graphic/chess_board/: CREDITS.md  chess_board_painter.rs  chess_board_widget.rs  drag_and_drop_handlers.rs  simple_svg_painter.rs
