[package]
name = "chess-pgn-reviser"
version = "0.1.0"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm = "0.19.0"
relm-derive = "0.19.0"
gtk = "0.8.0"
cairo-rs = "0.8.1"