[package]
name = "chess-pgn-reviser"
version = "0.1.0"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
edition = "2018"

[dependencies]
relm = "0.19.0"
relm-derive = "0.19.0"
gtk = "0.8.0"
cairo-rs = "0.8.1"
failure = "0.1.8"

[dependencies.resvg]
git = "https://github.com/RazrFalcon/resvg"
tag = "v0.9.0"
features = ["cairo-backend"]